# TSPGeneticAlgorithm

./: .gitignore  CMakeLists.txt  README.md  TSPGeneticAlgorithm.cpp  TSPGeneticAlgorithm.h  geneticAlgorithm.h  graph.h  main.cpp  mainFF.cpp  mainST.cpp  mainSeq.cpp  script.sh  undirectedGraph.cpp  undirectedGraph.h
report/: Report.tex
report/BenchMarkTSP/: SequentialTimeMeasures
report/BenchMarkTSP/convergence/: ff_exec.txt  seq_exec.txt  st_exec.txt
report/BenchMarkTSP/primo test/: resultsFF50020000.txt  resultsFF500500.txt  resultsFF5005000.txt  resultsST100020000.txt  resultsST1000500.txt  resultsST10005000.txt  resultsST200020000.txt  resultsST2000500.txt  resultsST20005000.txt  resultsST500.txt  resultsST50020000.txt  resultsST500500.txt  resultsST5005000.txt  resultsSeq2000.txt
report/BenchMarkTSP/scalability/1000/: resultsFF1000500.txt  resultsST100020000.txt
report/BenchMarkTSP/scalability/2000/: resultsST200020000.txt  resultsST2000500.txt  resultsST20005000.txt
report/BenchMarkTSP/scalability/500/: resultsFF500500.txt  resultsST500500.txt
report/BenchMarkTSP/secondotest/: resultsFF10005000.txt  resultsFF200020000.txt  resultsFF2000500.txt  resultsFF50020000.txt  resultsFF5005000.txt  resultsST1000500.txt  resultsST10005000.txt  resultsST50020000.txt
report/BenchMarkTSP/speedup/1000/: resultsFF100020000.txt
report/BenchMarkTSP/speedup/2000/: resultsFF20005000.txt
report/BenchMarkTSP/speedup/500/: resultsST5005000.txt
src/geneticAlgorithm/: TSPGeneticAlgorithm.cpp  TSPGeneticAlgorithm.h  TSPGeneticAlgorithmFF.cpp  TSPGeneticAlgorithmFF.h  TSPGeneticAlgorithmOMP.cpp  TSPGeneticAlgorithmOMP.h  TSPGeneticAlgorithmST.cpp  TSPGeneticAlgorithmST.h  geneticAlgorithm.h
src/graph/: graph.h  undirectedGraph.cpp  undirectedGraph.h
